Fix logo alignment (bigger size screen fix)

--- a/docs/stylesheets/extras.css
+++ b/docs/stylesheets/extras.css
@@ -1,6 +1,6 @@
 .md-header-nav__button.md-logo img {
     display: block;
-    height: 46px;
+    height: 48px;
     width: 120px;
 }
 
@@ -134,5 +134,11 @@
 @media only screen and (min-width: 45em) {
     .md-footer-social {
         padding: 0;
+    }
+}
+
+@media (min-width: 1600px) {
+    .md-header-nav__button.md-logo img {
+    height: 52px;
     }
 }
